1.0.8: Update libraw, drop custom RAW ImageIO plugin